src/objects/mAg_Household__c.object
<CustomObject>
    <fields>
        <fullName>WhoHouseholdMembersSellCrops__c</fullName>
        <label>Who Household Members Sell Crops</label>
        <picklist>
            <picklistValues>
                <fullName>1 Ako mismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Asawa/Babaeng Kinakasama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Anak na lalaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Anak na babae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Tatay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Nanay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Iba pang myembro ng pamilya (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhoManageHHSavings__c</fullName>
        <label>WhoManageHHSavings</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhoOwnsMobilePhone__c</fullName>
        <label>WhoOwnsMobilePhone</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhyEngageOtherMajor_SourceLivelihood__c</fullName>
        <label>WhyEngageOtherMajor SourceLivelihood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhyImportantInteractStaffAgroOffice__c</fullName>
        <label>WhyImportantInteractStaffAgroOffice</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhyNotChildrenBecomeFarmer__c</fullName>
        <label>WhyNotChildrenBecomeFarmer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WillingAttendNewTech__c</fullName>
        <label>WillingAttendNewTech</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WillingPayTrainingNewTech__c</fullName>
        <label>WillingPayTrainingNewTech</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WillingTryNewFarmTech__c</fullName>
        <label>WillingTryNewFarmTech</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorriedFoodEndBeforehavingMoney__c</fullName>
        <label>WorriedFoodEndBeforehavingMoney</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YearsBeenFarmer__c</fullName>
        <label>Years Been Farmer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>intervieweeNationalID__c</fullName>
        <label>Interviewee National ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>mAg_Household</label>
    <nameField>
        <displayFormat>MAGHH_{0000}</displayFormat>
        <label>mAg_Household Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>mAg_Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>